--- a/CarShareApi/CarShareApi.csproj
+++ b/CarShareApi/CarShareApi.csproj
@@ -280,12 +280,16 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Pages\Contact.html" />
+    <Content Include="Pages\Car.html" />
+    <Content Include="Pages\Cars.html" />
     <Content Include="Pages\About.html" />
     <Content Include="Pages\Home.html" />
     <Content Include="index.html" />
     <Content Include="Pages\Logon.html" />
     <Content Include="Scripts\App.js" />
+    <Content Include="Scripts\Controllers\AboutController.js" />
+    <Content Include="Scripts\Controllers\CarController.js" />
+    <Content Include="Scripts\Controllers\CarsController.js" />
     <Content Include="Scripts\Controllers\LogonController.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
