--- a/CarShareApi.Tests/App.config
+++ b/CarShareApi.Tests/App.config
@@ -4,13 +4,14 @@
     that apply only to the Test project.
 -->
 <configuration>
-    <appSettings>
-
-    </appSettings>
-
-    <connectionStrings>
-
-    </connectionStrings>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <appSettings></appSettings>
+  <connectionStrings>
+    <add name="CarShareContext" connectionString="metadata=res://*/Models.Repositories.Data.CarShareContext.csdl|res://*/Models.Repositories.Data.CarShareContext.ssdl|res://*/Models.Repositories.Data.CarShareContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ewebah.cxeughinog8n.us-east-1.rds.amazonaws.com;initial catalog=EWEBAH;persist security info=True;user id=cpt311;password=password;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -31,4 +32,10 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
