--- a/CarShareApi/Web.config
+++ b/CarShareApi/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -86,4 +86,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="CarShareContext" connectionString="metadata=res://*/Models.Repositories.Data.CarShareContext.csdl|res://*/Models.Repositories.Data.CarShareContext.ssdl|res://*/Models.Repositories.Data.CarShareContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ewebah.cxeughinog8n.us-east-1.rds.amazonaws.com;initial catalog=EWEBAH;persist security info=True;user id=cpt311;password=password;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
