added cors header to all responses and added account controller test class

--- a/CarShareApi.Tests/CarShareApi.Tests.csproj
+++ b/CarShareApi.Tests/CarShareApi.Tests.csproj
@@ -96,8 +96,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\AccountControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Controllers\ValuesControllerTest.cs" />
+    <Compile Include="Controllers\CarsControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
