--- a/CarShareApi.Tests/packages.config
+++ b/CarShareApi.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AWS.Logger.NLog" version="1.1.3" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
@@ -9,4 +10,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="NLog" version="4.4.12" targetFramework="net452" />
+  <package id="NLog.Config" version="4.4.12" targetFramework="net452" />
+  <package id="NLog.Schema" version="4.4.12" targetFramework="net452" />
 </packages>
