--- a/CarShareApi/packages.config
+++ b/CarShareApi/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
+  <package id="AWS.Logger.NLog" version="1.1.3" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
@@ -39,6 +40,9 @@
   <package id="mongocsharpdriver" version="1.8.3" targetFramework="net452" />
   <package id="MongoLab.AspNet.Identity" version="1.0.3.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="NLog" version="4.4.12" targetFramework="net452" />
+  <package id="NLog.Config" version="4.4.12" targetFramework="net452" />
+  <package id="NLog.Schema" version="4.4.12" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
