added registration repository

--- a/CarShareApi/CarShareApi.csproj
+++ b/CarShareApi/CarShareApi.csproj
@@ -318,6 +318,8 @@
     </Compile>
     <Compile Include="Models\Repositories\Implementations\CarRepository.cs" />
     <Compile Include="Models\Repositories\ICarRepository.cs" />
+    <Compile Include="Models\Repositories\Implementations\RegistrationRepository.cs" />
+    <Compile Include="Models\Repositories\IRegistrationRepository.cs" />
     <Compile Include="Models\Repositories\IRepository.cs" />
     <Compile Include="Models\Repositories\IUserRepository.cs" />
     <Compile Include="Models\Repositories\Implementations\UserRepository.cs" />
