--- a/CarShareApi/packages.config
+++ b/CarShareApi/packages.config
@@ -40,13 +40,16 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="mongocsharpdriver" version="1.8.3" targetFramework="net452" />
   <package id="MongoLab.AspNet.Identity" version="1.0.3.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="NLog" version="4.4.12" targetFramework="net452" />
   <package id="NLog.Config" version="4.4.12" targetFramework="net452" />
   <package id="NLog.Schema" version="4.4.12" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="Swashbuckle" version="5.6.0" targetFramework="net452" />
+  <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net452" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
   <package id="Unity.WebAPI" version="5.2.3" targetFramework="net452" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
