--- a/CarShareApi/CarShareApi.csproj
+++ b/CarShareApi/CarShareApi.csproj
@@ -264,6 +264,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CarsController.cs" />
+    <Compile Include="Controllers\CitiesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -274,7 +275,7 @@
     <Compile Include="Models\Repositories\Data\Booking.cs">
       <DependentUpon>CarShareContext.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Repositories\Data\BookingStatu.cs">
+    <Compile Include="Models\Repositories\Data\BookingStatus.cs">
       <DependentUpon>CarShareContext.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Repositories\Data\Car.cs">
@@ -304,7 +305,10 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CarShareContext.edmx</DependentUpon>
     </Compile>
-    <Compile Include="Models\Repositories\Data\CarStatu.cs">
+    <Compile Include="Models\Repositories\Data\CarStatus.cs">
+      <DependentUpon>CarShareContext.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Repositories\Data\City.cs">
       <DependentUpon>CarShareContext.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Repositories\Data\PaymentMethod.cs">
@@ -319,27 +323,32 @@
     <Compile Include="Models\Repositories\Data\TransactionHistory.cs">
       <DependentUpon>CarShareContext.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Repositories\Data\TransactionStatu.cs">
+    <Compile Include="Models\Repositories\Data\TransactionStatus.cs">
       <DependentUpon>CarShareContext.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Repositories\Data\User.cs">
       <DependentUpon>CarShareContext.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Repositories\Data\UserStatu.cs">
+    <Compile Include="Models\Repositories\Data\UserStatus.cs">
       <DependentUpon>CarShareContext.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Repositories\ICityRepository.cs" />
     <Compile Include="Models\Repositories\Implementations\CarRepository.cs" />
     <Compile Include="Models\Repositories\ICarRepository.cs" />
+    <Compile Include="Models\Repositories\Implementations\CityRepository.cs" />
     <Compile Include="Models\Repositories\Implementations\RegistrationRepository.cs" />
     <Compile Include="Models\Repositories\IRegistrationRepository.cs" />
     <Compile Include="Models\Repositories\IRepository.cs" />
     <Compile Include="Models\Repositories\IUserRepository.cs" />
     <Compile Include="Models\Repositories\Implementations\UserRepository.cs" />
+    <Compile Include="Models\Services\ICityService.cs" />
     <Compile Include="Models\Services\Implementations\CarService.cs" />
     <Compile Include="Models\Services\ICarService.cs" />
+    <Compile Include="Models\Services\Implementations\CityService.cs" />
     <Compile Include="Models\Services\Implementations\UserService.cs" />
     <Compile Include="Models\Services\IUserService.cs" />
     <Compile Include="Models\UnityResolver.cs" />
+    <Compile Include="ViewModels\CityViewModel.cs" />
     <Compile Include="ViewModels\LogonRequest.cs" />
     <Compile Include="ViewModels\LogonResponse.cs" />
     <Compile Include="ViewModels\RegisterRequest.cs" />
