added unit tests for car search. also set test repository data to load from json file.

--- a/CarShareApi.Tests/CarShareApi.Tests.csproj
+++ b/CarShareApi.Tests/CarShareApi.Tests.csproj
@@ -147,6 +147,8 @@
     <Content Include="NLog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <EmbeddedResource Include="Fakes\Data\Cars.json" />
+    <EmbeddedResource Include="Fakes\Data\Categories.json" />
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
     </None>
