Booking Process Update
Improvements added include:

DB Structure and Mailer

1) Inclusion of the Mail.cs file in the project build
2) Mailer : wrapped the mail message and SMTP mailer into its own object
3) Updated the table design moving billing details to the booking table
4) Removed the billing details from the transaction table
5) Made city name the primary key so changes to the carsharecontext have been updated

Booking Service
1) Carcategory billing rate is  now recorded at the time of billing rather than at check in
2) Calculation of total amount billable is calculated on the rate recorded at time of booking
3) Closed off the booking record by included the total billed hours and amount

--- a/CarShareApi/CarShareApi.csproj
+++ b/CarShareApi/CarShareApi.csproj
@@ -274,6 +274,7 @@
     <Compile Include="Models\Encryption.cs" />
     <Compile Include="Models\Filters\AssignOAuth2SecurityRequirements.cs" />
     <Compile Include="Models\Helpers.cs" />
+    <Compile Include="Models\Mail.cs" />
     <Compile Include="Models\Providers\CarShareAuthorisationServerProvider.cs" />
     <Compile Include="Models\Repositories\Data\Booking.cs">
       <DependentUpon>CarShareContext.tt</DependentUpon>
