Move Mailer Class to Interface
First steps taken to move the mailer class to an interface under providers

--- a/CarShareApi/CarShareApi.csproj
+++ b/CarShareApi/CarShareApi.csproj
@@ -276,6 +276,7 @@
     <Compile Include="Models\Helpers.cs" />
     <Compile Include="Models\Mail.cs" />
     <Compile Include="Models\Providers\CarShareAuthorisationServerProvider.cs" />
+    <Compile Include="Models\Providers\EmailProvider.cs" />
     <Compile Include="Models\Repositories\Data\Booking.cs">
       <DependentUpon>CarShareContext.tt</DependentUpon>
     </Compile>
