--- a/CarShareApi/NLog.config
+++ b/CarShareApi/NLog.config
@@ -25,10 +25,10 @@
 
     <!--
     Write events to a file with the date in the filename.  -->
-    
-    <target xsi:type="File" name="f" fileName="${basedir}/App_Data/Logs/${shortdate}.log"
-            layout="${longdate} ${uppercase:${level}} ${message}" />
 
+    <target name="console" xsi:type="Console"  layout="${longdate} ${uppercase:${level}} ${message}"/>
+    <target xsi:type="File" name="f" fileName="${basedir}/App_Data/Logs/${shortdate}.log" layout="${longdate} ${uppercase:${level}} ${message}" />
+    
   </targets>
 
   <rules>
@@ -36,7 +36,7 @@
 
     <!--
     Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f" -->
-    <logger name="*" minlevel="Debug" writeTo="f" />
+    <logger name="*" minlevel="Debug" writeTo="f,console" />
 
   </rules>
 </nlog>
