--- a/CarShareApi.Tests/CarShareApi.Tests.csproj
+++ b/CarShareApi.Tests/CarShareApi.Tests.csproj
@@ -38,6 +38,12 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="LightInject, Version=5.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\LightInject.5.0.0\lib\net45\LightInject.dll</HintPath>
+    </Reference>
+    <Reference Include="LightInject.WebApi, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\LightInject.WebApi.2.0.0\lib\net45\LightInject.WebApi.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Owin, Version=3.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Owin.3.1.0\lib\net45\Microsoft.Owin.dll</HintPath>
@@ -137,6 +143,7 @@
     <Compile Include="Fakes\FakeCarCategoryRepository.cs" />
     <Compile Include="Fakes\FakeCarRepository.cs" />
     <Compile Include="Fakes\FakeCityRepository.cs" />
+    <Compile Include="Fakes\FakePaymentMethodRepository.cs" />
     <Compile Include="Fakes\FakeRegistrationRepository.cs" />
     <Compile Include="Fakes\FakeTransactionHistoryRepository.cs" />
     <Compile Include="Fakes\FakeUserRepository.cs" />
