--- a/CarShareApi.Tests/packages.config
+++ b/CarShareApi.Tests/packages.config
@@ -3,6 +3,8 @@
   <package id="AWS.Logger.NLog" version="1.1.3" targetFramework="net452" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="LightInject" version="5.0.0" targetFramework="net452" />
+  <package id="LightInject.WebApi" version="2.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
