Proposed handling of transaction records
Made some changes to the DB to allow for better relationships between Booking > Transaction and Receipt.

The transaction piece brings foward the vehicle, booking and transaction records and puhes a transaction against teh transactionhistory table. This then creates a record for receipt (code made available however commented out. Thanks!

--- a/CarShareApi/CarShareApi.csproj
+++ b/CarShareApi/CarShareApi.csproj
@@ -369,6 +369,8 @@
     <Compile Include="Models\Services\Implementations\UserService.cs" />
     <Compile Include="Models\Services\IUserService.cs" />
     <Compile Include="Models\UnityResolver.cs" />
+    <Compile Include="ViewModels\Bookings\TransactionResponse.cs" />
+    <Compile Include="ViewModels\Bookings\TransactionRequest.cs" />
     <Compile Include="ViewModels\Bookings\OpenBookingResponse.cs" />
     <Compile Include="ViewModels\Cars\CarCategoryViewModel.cs" />
     <Compile Include="ViewModels\Cars\CarSearchCriteria.cs" />
