--- a/CarShareApi/CarShareApi.csproj
+++ b/CarShareApi/CarShareApi.csproj
@@ -402,6 +402,8 @@
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\Chicago.jpg" />
+    <Content Include="Content\Images\EweBah2.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Areas\HelpPage\Views\Web.config" />
@@ -465,7 +467,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\Images\" />
     <Folder Include="Diagrams\" />
     <Folder Include="Scripts\Services\" />
   </ItemGroup>
