Return registration detail
This functionality is to return the registration detail against a user. so that it can be updated later. Included is a new end point, code to return user registration.

Also updated a previous commit to rename PaymentMethod to PaymentMethods

Error proofed and successfully built application.

--- a/CarShareApi/CarShareApi.csproj
+++ b/CarShareApi/CarShareApi.csproj
@@ -384,6 +384,7 @@
     <Compile Include="ViewModels\CityViewModel.cs" />
     <Compile Include="ViewModels\Users\AddPaymentMethodRequest.cs" />
     <Compile Include="ViewModels\Users\AddPaymentMethodResponse.cs" />
+    <Compile Include="ViewModels\Users\RegisterViewModel.cs" />
     <Compile Include="ViewModels\Users\LogonRequest.cs" />
     <Compile Include="ViewModels\Users\LogonResponse.cs" />
     <Compile Include="ViewModels\Users\RegisterRequest.cs" />
