added get template endpoint and get template merge fields endpoint

--- a/CarShareApi/CarShareApi.csproj
+++ b/CarShareApi/CarShareApi.csproj
@@ -384,6 +384,7 @@
     <Compile Include="Models\UnityResolver.cs" />
     <Compile Include="ViewModels\Admin\TemplateUpdateRequest.cs" />
     <Compile Include="ViewModels\Admin\TemplateUpdateResponse.cs" />
+    <Compile Include="ViewModels\Admin\TemplateViewModel.cs" />
     <Compile Include="ViewModels\Bookings\BookingHistoryResponse.cs" />
     <Compile Include="ViewModels\Bookings\BookingViewModel.cs" />
     <Compile Include="ViewModels\Bookings\TransactionResponse.cs" />
