changed template fields endpoint to use a list of template fields as a return type instead of a dictionary to allow easier mapping on client side.

--- a/CarShareApi/CarShareApi.csproj
+++ b/CarShareApi/CarShareApi.csproj
@@ -382,6 +382,7 @@
     <Compile Include="Models\Services\Implementations\UserService.cs" />
     <Compile Include="Models\Services\IUserService.cs" />
     <Compile Include="Models\UnityResolver.cs" />
+    <Compile Include="ViewModels\Admin\TemplateField.cs" />
     <Compile Include="ViewModels\Admin\TemplateUpdateRequest.cs" />
     <Compile Include="ViewModels\Admin\TemplateUpdateResponse.cs" />
     <Compile Include="ViewModels\Admin\TemplateViewModel.cs" />
