added car update check to auto allocate cars to cities. also added two new unit tests for validate this. An additional fake template repository was also added to allow successful account testing.

--- a/CarShareApi.Tests/CarShareApi.Tests.csproj
+++ b/CarShareApi.Tests/CarShareApi.Tests.csproj
@@ -146,6 +146,7 @@
     <Compile Include="Fakes\FakeEmailProvider.cs" />
     <Compile Include="Fakes\FakePaymentMethodRepository.cs" />
     <Compile Include="Fakes\FakeRegistrationRepository.cs" />
+    <Compile Include="Fakes\FakeTemplateRepository.cs" />
     <Compile Include="Fakes\FakeTransactionHistoryRepository.cs" />
     <Compile Include="Fakes\FakeUserRepository.cs" />
     <Compile Include="Fakes\TestPrincipal.cs" />
@@ -164,6 +165,7 @@
     <EmbeddedResource Include="Fakes\Data\Categories.json" />
     <EmbeddedResource Include="Fakes\Data\Bookings.json" />
     <EmbeddedResource Include="Fakes\Data\Cities.json" />
+    <EmbeddedResource Include="Fakes\Data\Templates.json" />
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
     </None>
